js30 3rd, css var and js

--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -68,6 +68,10 @@
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
+    .secondHand{
+      height: 3px;
+    }
+
     .hour-hand{
       background: red;
       width: 25%;
