--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,8 +26,29 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    Array.prototype.some = function(){
+      const year = new Date(Date.now()).getFullYear();
+      for(let i = 0; i < this.length; i++){
+        if ( year - this[i].year >= 19 ) {
+          return true;
+          break;
+        }
+      }
+      return false;
+    };
+    console.log(people.some()); // true
     // Array.prototype.every() // is everyone 19 or older?
-
+    Array.prototype.every = function(){
+      const year = new Date(Date.now()).getFullYear();
+      for (let i = 0; i < this.length; i++){
+        if (year - this[i].year < 19 ) {
+          return false;
+          break;
+        }
+      }
+      return true;
+    };
+    console.log(people.every()); // false
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
