--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,6 +26,7 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    // const isAdult = people.some(()=>{});
     Array.prototype.some = function(){
       const year = new Date(Date.now()).getFullYear();
       for(let i = 0; i < this.length; i++){
@@ -58,6 +59,13 @@
       }
       return null;
     };
+    // const comment = comments.find((comment) => {
+    //   if (comment.id === 823423) {
+    //     return true;
+    //   }
+    // });
+    // const comment = comments.find(c => c.id === 823423);
+
     console.log(comments.find(823423));
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
@@ -72,10 +80,15 @@
       }
       return -1;
     };
+
+
     // Find the comment with this ID
     // delete the comment with the ID of 823423
     comments.findIndex(823423);
     console.log(comments);
+
+    const index = comments.findIndex(comment=>comment.id ===823423);
+    const newComments = [...comments.slice(0, index), ...comment.slice(index + 1)];
 
   </script>
 </body>
