--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,55 @@
     }
 
     // Regular
-
+    console.log('hello');
     // Interpolated
-
+    console.log('Why I do not have %s sring!', '+poo');
+    console.log(`Hello, I am a ${'+poo'} string`);
     // Styled
 
+    // console.log('%c I am some great text', 'font-size: 50px; background: red;')
+    
     // warning!
-
+    console.warn('OH NOOOO');
     // Error :|
-
+    console.error('Shit!');
     // Info
-
+    console.info('Crocodiles eat 3-4 people per year');
     // Testing
-
+    console.assert(1 === 1, 'That is wrong!');
+    console.assert(1 === 2, 'That is wrong!');
     // clearing
-
+    console.clear();
     // Viewing DOM Elements
-
+    const p = document.querySelector('p');
+    console.dir(p);
     // Grouping together
-
+    console.clear();
+    const cats = [{name: 'shasha', age: 13}, {name: 'night', age: 12}];
+    dogs.forEach(dog => {
+      // console.group(`${dog.name}`);
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.groupEnd(`${dog.name}`);
+    });
     // counting
-
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Steve');
+    console.count('Steve');
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/luuufan')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
+
+    console.table(dogs);
 
   </script>
 </body>
