--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -28,8 +28,43 @@
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem('items')) || [];
 
+  function addItem(e){
+    e.preventDefault();
+    const text = this.querySelector('[name=item]').value;
+    const item = {
+      text,
+      done: false
+    };
+    items.push(item);
+    localStorage.setItem('items', JSON.stringify(items));
+    populateItems(items, itemsList);
+    this.reset();
+  }
+
+  function populateItems(plates = [], platesList){
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? "checked" : ""}/>
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join("");
+  }
+
+  function toggleDone(e){
+    if (!e.target.matches('input')) return;
+    const index = e.target.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items)); 
+    populateItems(items, itemsList);
+  }
+
+  addItems.addEventListener('submit', addItem);
+  populateItems(items, itemsList);
+  itemsList.addEventListener('click', toggleDone);
 </script>
 
 
